# rs-clob-client-v2

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: MIGRATION.md
src/: client.rs  constants.rs  endpoints.rs  errors.rs  utilities.rs
src/client/: auth.rs  public.rs  trading.rs
src/order_builder/: builder.rs  helpers.rs
src/types/: auth.rs  markets.rs  mod.rs  orders.rs  primitives.rs  server.rs
tests/: balance_test.rs  eip712_test.rs  eoa_order_test.rs  events_test.rs  markets_test.rs  orderbook_test.rs  price_test.rs  tags_test.rs
tests/common/: mod.rs
