[package]
name = "rs-clob-client-v2"
version = "0.2.0"
edition = "2021"
authors = ["Ted"]
description = "Rust client for Polymarket's CLOB v2 protocol (Central Limit Order Book)"
license = "MIT"
repository = "https://github.com/tdergouzi/rs-clob-client-v2"
homepage = "https://github.com/tdergouzi/rs-clob-client-v2"
keywords = ["polymarket", "clob", "trading", "ethereum", "web3"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "socks"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum & Cryptography
rs_order_utils = "0.4.1"
rs-builder-signing-sdk = "0.1.2"

# Alloy - Modern Ethereum library
alloy-primitives = "1"
alloy-signer = "1"
alloy-signer-local = "1"

# Authentication & Crypto
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = "0.4"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
rand = "0.8"
dotenvy = "0.15"

[lib]
name = "rs_clob_client_v2"
path = "src/lib.rs"
